crates/hwp-core/tests/snapshots/snapshot_tests__software_page_0007.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: page_html
---
<!DOCTYPE html>
<html><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><head><title></title><meta http-equiv="content-type" content="text/html; charset=utf-8"><link rel="stylesheet" type="text/css" href="software_style.css"></head><body><div class="hpa" style="width:210mm;height:296.99mm;"><div class="hcD" style="left:20mm;top:15mm;"><div class="hcI"><div class="hls ps22" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:170.00mm;"></div></div></div><div class="hcD" style="left:20mm;top:25mm;"><div class="hcI"><div class="hls ps2" style="line-height:32.30mm;white-space:nowrap;left:0.00mm;top:321.97mm;height:32.30mm;width:170.00mm;"><div class="htb" style="left:0mm;width:167.93mm;top:0mm;height:32.3mm;display:inline-block;position:relative;vertical-align:middle;"><svg class="hs" viewBox="-2.5 -2.5 172.93 37.3" style="left:-2.5mm;top:-2.5mm;width:172.93mm;height:37.3mm;"><defs><pattern id="w_00" width="10" height="10" patternUnits="userSpaceOnUse"><rect width="10" height="10" fill="rgb(239,239,239)" /></pattern></defs><path fill="url(#w_00)" d="M0,0L11.19,0L11.19,12.55L0,12.55L0,0Z "></path><path fill="url(#w_00)" d="M11.19,0L35.38,0L35.38,12.55L11.19,12.55L11.19,0Z "></path><path fill="url(#w_00)" d="M35.38,0L71.77,0L71.77,12.55L35.38,12.55L35.38,0Z "></path><path fill="url(#w_00)" d="M71.77,0L120.22,0L120.22,12.55L71.77,12.55L71.77,0Z "></path><path fill="url(#w_00)" d="M120.22,0L167.93,0L167.93,12.55L120.22,12.55L120.22,0Z "></path><path d="M11.19,0 L11.19,32.3" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M35.38,0 L35.38,32.3" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M71.77,0 L71.77,32.3" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M120.22,0 L120.22,32.3" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.2,0 L168.13,0" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M-0.25,12.55 L168.18,12.55" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.5;"></path><path d="M-0.06,19.13 L167.99,19.13" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,25.72 L167.99,25.72" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.2,32.3 L168.13,32.3" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path></svg><div class="hce" style="left:0mm;top:0mm;width:11.19mm;height:12.55mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI" style="top:3.51mm;"><div class="hls ps26" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:170.00mm;"><span class="hrt cs23">번호</span></div></div></div></div><div class="hce" style="left:11.19mm;top:0mm;width:24.2mm;height:12.55mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI" style="top:3.51mm;"><div class="hls ps26" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:170.00mm;"><span class="hrt cs23">자료형태</span></div></div></div></div><div class="hce" style="left:35.38mm;top:0mm;width:36.39mm;height:12.55mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI" style="top:3.51mm;"><div class="hls ps26" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:170.00mm;"><span class="hrt cs23">파일명</span></div></div></div></div><div class="hce" style="left:71.77mm;top:0mm;width:48.45mm;height:12.55mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI" style="top:3.51mm;"><div class="hls ps26" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:170.00mm;"><span class="hrt cs23">자료 설명(키워드)</span></div></div></div></div><div class="hce" style="left:120.22mm;top:0mm;width:47.71mm;height:12.55mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI" style="top:3.51mm;"><div class="hls ps26" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:170.00mm;"><span class="hrt cs23">비고(출처 등)</span></div></div></div></div><div class="hce" style="left:0mm;top:12.55mm;width:11.19mm;height:6.58mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI" style="top:0.53mm;"><div class="hls ps26" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:170.00mm;"><span class="hrt cs23">1</span></div></div></div></div><div class="hce" style="left:11.19mm;top:12.55mm;width:24.2mm;height:6.58mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI" style="top:0.53mm;"><div class="hls ps26" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:170.00mm;"><span class="hrt cs23">ERD</span></div></div></div></div><div class="hce" style="left:35.38mm;top:12.55mm;width:36.39mm;height:6.58mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI" style="top:0.53mm;"><div class="hls ps26" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:170.00mm;"><span class="hrt cs23">mozuERD</span></div></div></div></div><div class="hce" style="left:71.77mm;top:12.55mm;width:48.45mm;height:6.58mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI" style="top:0.53mm;"><div class="hls ps26" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:170.00mm;"><span class="hrt cs23">모주 서비스DB 구조 요약</span></div></div></div></div><div class="hce" style="left:120.22mm;top:12.55mm;width:47.71mm;height:6.58mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI" style="top:0.53mm;"><div class="hls ps26" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:170.00mm;"><span class="hrt cs23">ERD CLOUD</span></div></div></div></div><div class="hce" style="left:0mm;top:19.13mm;width:11.19mm;height:6.58mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI" style="top:0.53mm;"><div class="hls ps26" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:170.00mm;"><span class="hrt cs23">2</span></div></div></div></div><div class="hce" style="left:11.19mm;top:19.13mm;width:24.2mm;height:6.58mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI" style="top:0.53mm;"><div class="hls ps26" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:170.00mm;"><span class="hrt cs23">API 명세</span></div></div></div></div><div class="hce" style="left:35.38mm;top:19.13mm;width:36.39mm;height:6.58mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI" style="top:0.53mm;"><div class="hls ps26" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:170.00mm;"><span class="hrt cs23">mozuAPI</span></div></div></div></div><div class="hce" style="left:71.77mm;top:19.13mm;width:48.45mm;height:6.58mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI" style="top:0.53mm;"><div class="hls ps26" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:170.00mm;"><span class="hrt cs23">모주 서비스 api에 대한 설명</span></div></div></div></div><div class="hce" style="left:120.22mm;top:19.13mm;width:47.71mm;height:6.58mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI" style="top:0.53mm;"><div class="hls ps26" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:170.00mm;"><span class="hrt cs23">Postman</span></div></div></div></div><div class="hce" style="left:0mm;top:25.72mm;width:11.19mm;height:6.58mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI" style="top:0.53mm;"><div class="hls ps26" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:170.00mm;"><span class="hrt cs23">3</span></div></div></div></div><div class="hce" style="left:11.19mm;top:25.72mm;width:24.2mm;height:6.58mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI" style="top:0.53mm;"><div class="hls ps26" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:170.00mm;"><span class="hrt cs23">사이트</span></div></div></div></div><div class="hce" style="left:35.38mm;top:25.72mm;width:36.39mm;height:6.58mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI" style="top:0.53mm;"><div class="hls ps26" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:170.00mm;"><span class="hrt cs23">mozuGitH</span><span class="hrt cs3"><u>hub</u></span></div></div></div></div><div class="hce" style="left:71.77mm;top:25.72mm;width:48.45mm;height:6.58mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI" style="top:0.53mm;"><div class="hls ps26" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:170.00mm;"><span class="hrt cs23">모주 서비스 개발 깃허브 올가니제이션</span></div></div></div></div><div class="hce" style="left:120.22mm;top:25.72mm;width:47.71mm;height:6.58mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI" style="top:0.53mm;"><div class="hls ps26" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:170.00mm;"><span class="hrt cs23">GitHub</span></div></div></div></div></div></div></div></div></div></body></html>
