crates/hwp-core/tests/snapshots/snapshot_tests__strikethrough_markdown.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: markdown
---
# HWP 문서



**용지 크기**: 210.00mm x 296.99mm



~~strikethrough~~

~~취소선~~

밑줄

밑줄~~취소선~~**굵게**
