crates/hwp-core/tests/snapshots/snapshot_tests__tabdef_html.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: html
---
<div class="body">
<p><span style="font-size: 10.0pt; font-family: '바탕'">&emsp;</span><span style="font-size: 10.0pt; font-family: '바탕'">	</span><span style="font-size: 10.0pt; font-family: '바탕'">&emsp;</span><span style="font-size: 10.0pt; font-family: '바탕'">	</span><span style="font-size: 10.0pt; font-family: '바탕'">&emsp;</span><span style="font-size: 10.0pt; font-family: '바탕'">	</span></p>
<p><span style="font-size: 10.0pt; font-family: '바탕'">&emsp;</span><span style="font-size: 10.0pt; font-family: '바탕'">	</span><span style="font-size: 10.0pt; font-family: '바탕'">L</span><span style="font-size: 10.0pt; font-family: '바탕'">&emsp;</span><span style="font-size: 10.0pt; font-family: '바탕'">	</span><span style="font-size: 10.0pt; font-family: '바탕'">L</span><span style="font-size: 10.0pt; font-family: '바탕'">&emsp;</span><span style="font-size: 10.0pt; font-family: '바탕'">	</span><span style="font-size: 10.0pt; font-family: '바탕'">L</span></p>
<p><span style="font-size: 10.0pt; font-family: '바탕'">&emsp;</span><span style="font-size: 10.0pt; font-family: '바탕'">	</span><span style="font-size: 10.0pt; font-family: '바탕'">R</span><span style="font-size: 10.0pt; font-family: '바탕'">&emsp;</span><span style="font-size: 10.0pt; font-family: '바탕'">	</span><span style="font-size: 10.0pt; font-family: '바탕'">R</span><span style="font-size: 10.0pt; font-family: '바탕'">&emsp;</span><span style="font-size: 10.0pt; font-family: '바탕'">	</span><span style="font-size: 10.0pt; font-family: '바탕'">R</span></p>
<p><span style="font-size: 10.0pt; font-family: '바탕'">&emsp;</span><span style="font-size: 10.0pt; font-family: '바탕'">	</span><span style="font-size: 10.0pt; font-family: '바탕'">C</span><span style="font-size: 10.0pt; font-family: '바탕'">&emsp;</span><span style="font-size: 10.0pt; font-family: '바탕'">	</span><span style="font-size: 10.0pt; font-family: '바탕'">C</span><span style="font-size: 10.0pt; font-family: '바탕'">&emsp;</span><span style="font-size: 10.0pt; font-family: '바탕'">	</span><span style="font-size: 10.0pt; font-family: '바탕'">C</span></p>
<p><span style="font-size: 10.0pt; font-family: '바탕'">&emsp;</span><span style="font-size: 10.0pt; font-family: '바탕'">	</span><span style="font-size: 10.0pt; font-family: '바탕'">M</span><span style="font-size: 10.0pt; font-family: '바탕'">&emsp;</span><span style="font-size: 10.0pt; font-family: '바탕'">	</span><span style="font-size: 10.0pt; font-family: '바탕'">M</span><span style="font-size: 10.0pt; font-family: '바탕'">&emsp;</span><span style="font-size: 10.0pt; font-family: '바탕'">	</span><span style="font-size: 10.0pt; font-family: '바탕'">M</span></p>
<p><span style="font-size: 10.0pt; font-family: '바탕'">&emsp;</span><span style="font-size: 10.0pt; font-family: '바탕'">	</span><span style="font-size: 10.0pt; font-family: '바탕'">L</span><span style="font-size: 10.0pt; font-family: '바탕'">&emsp;</span><span style="font-size: 10.0pt; font-family: '바탕'">	</span><span style="font-size: 10.0pt; font-family: '바탕'">L</span><span style="font-size: 10.0pt; font-family: '바탕'">&emsp;</span><span style="font-size: 10.0pt; font-family: '바탕'">	</span><span style="font-size: 10.0pt; font-family: '바탕'">L</span></p>
<p><span style="font-size: 10.0pt; font-family: '바탕'">&emsp;</span><span style="font-size: 10.0pt; font-family: '바탕'">	</span><span style="font-size: 10.0pt; font-family: '바탕'">E</span><span style="font-size: 10.0pt; font-family: '바탕'">&emsp;</span><span style="font-size: 10.0pt; font-family: '바탕'">	</span><span style="font-size: 10.0pt; font-family: '바탕'">E</span></p>
<p><span style="font-size: 10.0pt; font-family: '바탕'">&emsp;</span><span style="font-size: 10.0pt; font-family: '바탕'">	</span><span style="font-size: 10.0pt; font-family: '바탕'">I</span><span style="font-size: 10.0pt; font-family: '바탕'">&emsp;</span><span style="font-size: 10.0pt; font-family: '바탕'">	</span><span style="font-size: 10.0pt; font-family: '바탕'">I</span><span style="font-size: 10.0pt; font-family: '바탕'">&emsp;</span><span style="font-size: 10.0pt; font-family: '바탕'">	</span><span style="font-size: 10.0pt; font-family: '바탕'">I</span></p>
</div>
