crates/hwp-core/tests/snapshots/snapshot_tests__tabdef_markdown.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: markdown
---
# HWP 문서



**용지 크기**: 0.00mm x 0.00mm



L	L	L

R	R	R

C	C	C

M	M	M

L	L	L

E	E

I	I	I
