crates/hwp-core/tests/snapshots/snapshot_tests__table2_hwpx_markdown.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: markdown
---
|  |
| --- ||  |
| --- |
